Simple-Grid/static/css/style.css
.container {
    padding-bottom: 1em;
}

.avatar, .city {
    width: 200px;
    height: 200px;
    object-fit: cover;
}

.temp {
    width: 170px;
    height: 170px;
    object-fit: cover;
}

.atat {
    height: 100%;
    padding: auto;
}

table {
    width: 80%;
    margin: 10px;
}

table, tr, td, th {
    border: 1px solid black;
    border-collapse: collapse;
}

table tr:first-child {
    background-color: grey;
}

th {
    color: aliceblue;
}

th, td {
    height: 30px;
}

.card {
    border: 1px solid black;
    box-shadow: 3px 3px rgb(128,128,128,0.5);
    margin-bottom: 20px;
    /* padding: 4px; */
}

@media (max-width: 688px) {
    .temp {
        float: left;
    }
    .heaven img {
        float: right;
    }
}


@media (min-width: 900px) {
    .heyShorty {
        overflow: hidden;
        height: 200px;
    }
}

